# GameOfLife

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h
src/win32/: game.rc
